Fix social widgets not showing on widgets

--- a/src/LjdsBundle/Resources/public/css/style.scss
+++ b/src/LjdsBundle/Resources/public/css/style.scss
@@ -207,7 +207,7 @@ hr {
 	background: #FFF;
 	padding: 20px 30px;
 	text-align: left;
-	max-width: 850px;
+	max-width: 750px;
 	margin: 40px auto;
 	position: relative;
 	border-radius: 2px;
